// Copyright 2021 Lightbend Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package customer.view;

import "customer/api/publisher_api.proto";
import "kalix/annotations.proto";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

message Customer {
  string customer_id = 1;
  string email = 2;
  string name = 3;
  uint32 updates = 4;
  google.protobuf.Timestamp created = 5;
  google.protobuf.Timestamp lastUpdate = 6;
}
// tag::view[]
service AllCustomersView {
  option (kalix.codegen) = {
    view: {}
  };

  // consume events published by scala-protobuf-eventsourced-customer-registry/CustomerEventsServiceAction
  rpc ProcessCustomerCreated(api.Created) returns (Customer) { // <4>
    option (kalix.method).view.update = {
      table: "all_customers"
    };
    option (kalix.method).eventing.in.direct = { // <1>
      service: "customer-registry" // <2>
      event_stream_id: "customer_events" // <3>
    };
  }

  rpc CatchAllIgnore(google.protobuf.Any) returns (google.protobuf.Empty) {
    // consume events from DirectEventingOutService1
    option (kalix.method).eventing.in = {
      direct {
        // Kalix deployment name (but localhost here for tests)
        service: "customer-registry"
        // stream id from service above
        event_stream_id: "customer_events"
      };
      ignore: true;
    };
  }

  rpc GetCustomers(google.protobuf.Empty) returns (stream Customer) {
    option (kalix.method).view.query = {
      query: "SELECT * FROM all_customers"
    };
  }
}
// end::view[]